# game_crawler

./: .gitignore  README.md  crawler.ipynb  pyproject.toml  requirements.txt
notebooks/: crawler.ipynb
