[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["juliekuo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
tqdm = "^4.67.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
